examples/errors/e0101.sdm
module example <https://example.com/api> is

  import other

end
